Swagger UI integration with Rest controller

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,13 @@
 #APP SPECIFIC CUSTOM PROPERTIES
 app:
   name: demo
+  api:
+    title: Spring boot demo API
+    version: 1.0.0
+    description: Spring boot demo API description
+    base-package: com.abc.demo.controller
+    contact-name: apisupportgroup
+    contact-email: apisupportgroup@abc.com
 #LOGGING PROPERTIES
 logging:
   level:
@@ -9,7 +16,7 @@ logging:
 spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    driver-class-name: org.mariadb.jdbc.Driver    url: jdbc:mariadb://localhost:3306/mydb
+    url: jdbc:h2:mem:testdb
     username: DB_USER_NAME
     password: ENCRYPTED_PASSWORD
     hikari:      auto-commit: true
@@ -18,5 +25,7 @@ spring:
       max-lifetime: 1800000
       minimum-idle: 10
       maximum-pool-size: 10
+  # Enabling H2 Console
+  h2.console.enabled: true
   jpa:    generate-ddl: false
     show-sql: false
