Created userGroups entity to showcase many to many relationship

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,4 +28,4 @@ spring:
   # Enabling H2 Console
   h2.console.enabled: true
   jpa:    generate-ddl: false
-    show-sql: false
+    show-sql: true
