--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,11 +8,11 @@ app:
     base-package: com.abc.demo.controller
     contact-name: apisupportgroup
     contact-email: apisupportgroup@abc.com
-#LOGGING PROPERTIES
+server:
+  port: 8090
 logging:
   level:
     root: INFO
-#SPRING PROPETIES
 spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
