--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,18 @@
 #APP SPECIFIC CUSTOM PROPERTIES
 app:
-  name: demo
+  name: spring boot application
   api:
-    title: Spring boot demo API
+    title: Spring Boot APIs
     version: 1.0.0
-    description: Spring boot demo API description
-    base-package: com.abc.demo.controller
+    description: Spring Boot APIs description
+    base-package: com.abc.controller
     contact-name: apisupportgroup
     contact-email: apisupportgroup@abc.com
     logging:
       enable: true
       url-patterns: "/users/*"
 server:
-  port: 8090
+  port: 8080
 logging:
   level:
     root: INFO
