how to pretty print JSON Response

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,11 @@ logging:
     root: INFO
     com.abc.demo: DEBUG
 spring:
+  banner:
+    location: classpath:banner.txt
+  jackson:
+    serialization:
+      indent_output: true
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:h2:mem:testdb
