--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,17 @@
+info:
+  app:
+    name: spring boot microservice
+    version: 1.0.0_RELEASE
+    description: more details about sprint boot microservice
+    contact-support: apisupportgroup@abc.com
+  copyright: copyright (c) abc.com
+  license: MIT
+  tech-used:
+    - name: java
+      version: 11.x
+    - name: spring-boot
+      version: 2.x
+
 #APP SPECIFIC CUSTOM PROPERTIES
 app:
   name: spring boot application
